Collectd configuration file.

--- a/collectd.conf
+++ b/collectd.conf
@@ -1,3 +1,7 @@
+# collectd configuration file
+#
+# ted.sluis@gmail.com
+#
 # Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Oliver Jowett <oliver@mutability.co.uk> and Xforce30164
 
 Hostname "localhost"
