Enable collectd event logging to /var/log/collect.log.

--- a/collectd.conf
+++ b/collectd.conf
@@ -10,6 +10,14 @@ Timeout 2
 ReadThreads 5
 WriteThreads 1
 
+# Enable collectd event logging 
+LoadPlugin "logfile"
+<Plugin "logfile">
+  LogLevel "info"
+  File "/var/log/collectd.log"
+  Timestamp true
+</Plugin>
+
 LoadPlugin rrdtool
 <Plugin rrdtool>
         DataDir "/var/lib/collectd/rrd"
